Fixed issue with navigation added scrollbar

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -22,7 +22,6 @@ body {
   margin: 0px auto;
   align-items: center;
   justify-content: center;
-  max-width: 960px;
 }
 
 .site-content {
